[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/texture/interface/menu/data_focus_0.png" type="Texture" id=1]
[ext_resource path="res://assets/texture/interface/menu/data_focus_1.png" type="Texture" id=2]
[ext_resource path="res://source/scene/world/environment_default.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/shader/rainbow.shader" type="Shader" id=4]
[ext_resource path="res://assets/interface/font/data/nishiki_teki.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://source/script/interface/ScreenData.gd" type="Script" id=6]
[ext_resource path="res://source/scene/interface/data_file.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/interface/theme/menu.tres" type="Theme" id=8]


[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/strength = 0.125
shader_param/speed = 0.1
shader_param/angle = 155.0

[sub_resource type="DynamicFont" id=5]
size = 35
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = -10
extra_spacing_space = 5
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=4]
Label/fonts/font = SubResource( 5 )
RichTextLabel/fonts/normal_font = SubResource( 5 )

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 2
frame_0/texture = ExtResource( 1 )
frame_1/texture = ExtResource( 2 )
frame_1/delay_sec = 0.0

[node name="GuiData" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 6 )

[node name="EnvironmentDefault" parent="." instance=ExtResource( 3 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 256
custom_constants/margin_top = 128
custom_constants/margin_left = 256
custom_constants/margin_bottom = 128

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
margin_left = 256.0
margin_top = 128.0
margin_right = 1664.0
margin_bottom = 952.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 64
custom_constants/hseparation = 64
columns = 2

[node name="DataFile0" parent="MarginContainer/GridContainer" instance=ExtResource( 7 )]
material = SubResource( 2 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 672.0
margin_bottom = 380.0
theme = SubResource( 4 )
texture_focused = SubResource( 1 )

[node name="DataFile1" parent="MarginContainer/GridContainer" instance=ExtResource( 7 )]
material = SubResource( 2 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 736.0
margin_right = 1408.0
margin_bottom = 380.0
theme = SubResource( 4 )
texture_focused = SubResource( 1 )
applied_data_file = 1

[node name="DataFile2" parent="MarginContainer/GridContainer" instance=ExtResource( 7 )]
material = SubResource( 2 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 444.0
margin_right = 672.0
margin_bottom = 824.0
theme = SubResource( 4 )
texture_focused = SubResource( 1 )
applied_data_file = 2

[node name="DataFile3" parent="MarginContainer/GridContainer" instance=ExtResource( 7 )]
material = SubResource( 2 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 736.0
margin_top = 444.0
margin_right = 1408.0
margin_bottom = 824.0
theme = SubResource( 4 )
texture_focused = SubResource( 1 )
applied_data_file = 3

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0 )
fov = 80.0
far = 150.0

[node name="OptionsButton" type="Button" parent="."]
anchor_left = 0.878
anchor_top = 0.937
anchor_right = 0.878
anchor_bottom = 0.937
margin_left = -195.76
margin_top = -42.96
margin_right = 194.24
margin_bottom = 43.04
size_flags_horizontal = 0
size_flags_vertical = 0
text = "TITLE_OPTIONS"

[connection signal="button_down" from="MarginContainer/GridContainer/DataFile0" to="." method="_on_DataFile0_button_down"]
[connection signal="button_down" from="MarginContainer/GridContainer/DataFile1" to="." method="_on_DataFile1_button_down"]
[connection signal="button_down" from="MarginContainer/GridContainer/DataFile2" to="." method="_on_DataFile2_button_down"]
[connection signal="button_down" from="MarginContainer/GridContainer/DataFile3" to="." method="_on_DataFile3_button_down"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
